--- a/content/data/config.json
+++ b/content/data/config.json
@@ -154,5 +154,6 @@
         "anncmnt_is_home_only": true,
         "anncmnt_has_close": true,
         "anncmnt_id": "new-features"
-    }
+    },
+    "domain": "https://dogecoin-gen-652df.netlify.app"
 }
